# anki_gpt

./: .env.example  .gitignore  README.md  anki.py  backfill.py  bot.py  chatgpt.py  cli.py  config.py  db.py  main.py  plan.md  pyproject.toml  requirements.txt  sync.py  test_chatgpt.py  user_settings.json  user_settings.py  word.py  word_service.py  word_sync.py
prompts/: extract_words_prompt.md  generate_tags_prompt.md  get_definitions_prompt.md
web/: viewer.py
web/static/: script.js  style.css
web/templates/: edit.html  index.html  settings.html
